contentsmall set sizes

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <h2>Activites in Marseille</h2>
     <div class="mainContentActivity">
       <div class="firstActivityBlock">
-        <a href="">
+        <a href="#">
           <div class="blockFigureLarge">
             <img
               class="imgActivity"
@@ -413,7 +413,7 @@
       </div>
       <div class="secondActivityBlock">
         <div class="contentSmall1">
-          <a href="">
+          <a href="#">
             <div class="blockFigureSmall1">
               <img
                 class="imgActivity"
@@ -425,7 +425,7 @@
           </a>
         </div>
         <div class="contentSmall2">
-          <a href="">
+          <a href="#">
             <div class="blockFigureSmall2">
               <img
                 class="imgActivity"
@@ -437,7 +437,7 @@
         </div>
       </div>
       <div class="thirdActivityBlock">
-        <a href="">
+        <a href="#">
           <div class="blockFigureLarge">
             <img
               class="imgActivity"
@@ -450,10 +450,10 @@
       </div>
       <div class="fourthActivityBlock">
         <div class="contentSmall3">
-          <a href="">
+          <a href="#">
             <div class="blockFigureSmall3">
               <img
-                class="imageActivity"
+                class="imgActivity"
                 src="assest/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                 alt=""
               />
@@ -462,10 +462,10 @@
           </a>
         </div>
         <div class="contentSmall4">
-          <a href="">
+          <a href="#">
             <div class="blocFigureSmall4">
               <img
-                class="imageActivity"
+                class="imgActivity"
                 src="assest/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                 alt=""
               />
