change positions and sizes in activities

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         </div>
         <div class="contentSmall4">
           <a href="#">
-            <div class="blocFigureSmall4">
+            <div class="blockFigureSmall4">
               <img
                 class="imgActivity"
                 src="assest/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
