footer section start

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <div class="blockFigureSmall2">
               <img
                 class="imgActivity"
-                src="assest/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                src="assest/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
               />
             </div>
             <p class="textActivity">Frioul Island</p>
@@ -477,5 +477,15 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
+  <footer>
+    <div class="about">
+      <h3>About</h3>
+      <ul>
+        <li><a href="#">Site Map</a></li>
+        <li><a href="#">General Terms and Conditions</a></li>
+        <li><a href="#">Data and Privacy</a></li>
+      </ul>
+    </div>
 </body>
 </html>
