second column of footer

--- a/index.html
+++ b/index.html
@@ -487,5 +487,13 @@
         <li><a href="#">Data and Privacy</a></li>
       </ul>
     </div>
+    <div class="ourAcc">
+      <h3>Our Accomodations</h3>
+      <ul>
+        <li><a href="#">Quality Assessment</a></li>
+        <li><a href="#">You have a hotel?</a></li>
+      </ul>
+    </div>
+
 </body>
 </html>
