third column of footer

--- a/index.html
+++ b/index.html
@@ -494,6 +494,13 @@
         <li><a href="#">You have a hotel?</a></li>
       </ul>
     </div>
-
+    <div class="assistance">
+      <h3>Assistance</h3>
+      <ul>
+        <li><a href="#">Help Dest</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
