footer html done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>Booki</title>
 </head>
 <body>
-  <section class="header">
+  <main>
+    <!-- HEADER = logo - serachBar - menuBar - filter --->
+    <section class="header">
       <div class="navbar">
         <div>
           <img src="assest/images/logo/Booki.png" width="100px" alt="LOGO">
@@ -70,10 +72,10 @@
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
-  </section>  
+    </section>  
 
-  <!----- Accomodation and Popular ----->
-  <div class="mainPopularAcc marginSides">
+    <!----- Accomodation and Popular ----->
+    <div class="mainPopularAcc marginSides">
     <!---- Accomodation section ----->
     <section id="accomodations" class="backgroundGrid">
       <h2 class="accomodationTitle">Accomodations in Marseille</h2>
@@ -393,10 +395,10 @@
         </a>
       </div>
     </section>  
-  </div>
+    </div>
 
-   <!-- Activities SECTION -->
-  <section id="activites" class="marginSides">
+    <!-- Activities SECTION -->
+    <section id="activites" class="marginSides">
     <h2>Activites in Marseille</h2>
     <div class="mainContentActivity">
       <div class="firstActivityBlock">
@@ -475,10 +477,10 @@
         </div>
       </div>
     </div>
-  </section>
+    </section>
 
-  <!-- FOOTER -->
-  <footer>
+    <!-- FOOTER -->
+    <footer>
     <div class="about">
       <h3>About</h3>
       <ul>
@@ -501,6 +503,7 @@
         <li><a href="#">Contact Us</a></li>
       </ul>
     </div>
-  </footer>
+    </footer>
+  </main>
 </body>
 </html>
