respondive mobile version

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <!-- HEADER = logo - serachBar - menuBar - filter --->
-    <section class="header">
+    <header class="header">
       <div class="navbar">
         <div>
           <img src="assest/images/logo/Booki.png" width="100px" alt="LOGO">
@@ -72,8 +72,8 @@
         <label><i class="fa fa-circle-info"></i></label>
         <p>More than 500 accomodations are available in this city</p>
       </div>
-    </section>  
-
+    </header> 
+    
     <!----- Accomodation and Popular ----->
     <div class="mainPopularAcc marginSides">
     <!---- Accomodation section ----->
