changes in search button

--- a/index.html
+++ b/index.html
@@ -51,17 +51,12 @@
         </div> 
       </div>
       <div class="topnav">
-        <label class="label-container">
-        <i class="fa-solid fa-location-dot"></i>
-        </label>
-        <div class="search-container">
-          <form>
-           <input type="text" placeholder=" Marseille, France">
-           <button class="searchButton" type="submit" >Search</button>
-           <button class="searchButtonMob" type="button">
-            <i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
-          </form>
-        </div>
+        <form class="search-container">
+            <i class="fa-solid fa-location-dot" id="locationIconStyle"></i>
+            <input type="text" placeholder=" Marseille, France" name="Search">
+           <button type="submit">Search<i class="fa-sharp fa-solid fa-magnifying-glass hide"></i></button>
+          </div>
+        </form>
       </div>
       <!----- Filters section ----->
       <section class="sectionFiltres marginSides">
