tablet version start

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Booki</title>
 </head>
 <body>
-  <!-- HEADER = logo - serachBar - menuBar - filter--->
+  <!-- HEADER -- logo - serachBar - menuBar - filter -->
   <header class="header">
     <div class="navbar">
       <div class="logo">
