changes to book icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="navbar">
       <div class="logo">
-        <img src="assest/images/logo/Booki.png"width="100px" alt="LOGO">
+        <img src="assest/images/logo/Booki.png" alt="LOGO">
       </div>
       <nav>
         <ul>
