--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Booki</title>
 </head>
 <body>
-  <!-- HEADER -- logo - serachBar - menuBar - filter -->
+  <!-- HEADER - logo - serachBar - menuBar - filter -->
   <header class="header">
     <div class="navbar">
       <div class="logo">
@@ -30,16 +30,12 @@
   <!-- Mobile Version -->
   <header id="headerMob">
     <div class="headerMobile">
-      <img
-        id="logoMob"
-        src="assest/images/logo/Booki.png"
-        alt="logo"
-      />
+      <img id="logoMob" src="assest/images/logo/Booki.png" alt="logo"/>
     </div>
     <div class="navMobile">
       <ul>
-        <li><a href="#">Accomodations<li>
-        <li><a href="#">Activites<a><li>
+        <li><a href="#">Accomodations </a></li>
+        <li><a href="#">Activites </a></li>
       </ul>
     </div>
   </header>      
@@ -52,7 +48,7 @@
       <p>Downtown or in nature</p>
       <form class="searchBox">
         <i id="iconSearch" class="fas fa-map-marker-alt fa-sm"></i>
-        <input type="search" placeholder="Marseille, France" />
+        <input type="search" placeholder="Marseille, France">
         <button class="buttonSearch" type="button">Search</button>
         <button class="buttonSearchMob" type="button">
           <i class="fas fa-search fa-sm"></i>
@@ -68,7 +64,7 @@
           <div class="iconFiltres">
             <i class="fas fa-money-bill-wave-alt fa-sm"></i>
           </div>
-          <p>Low cost   </p>
+          <p>Low cost</p>
         </div>
         <div class="filtres">
           <div class="iconFiltres"><i class="fas fa-child fa-sm"></i></div>
@@ -311,7 +307,7 @@
     <section id="popular" class="backgroundGrid">
       <div class="popularTitle">
         <h2>Most Papular</h2>
-        <i class="fa-sharp fa-solid fa-star"></i></i>
+        <i class="fa-sharp fa-solid fa-star"></i>
       </div>
       <div class="mainContentPopular">
         <a href="#" class="contentPopular backgroundBlank">
@@ -320,12 +316,45 @@
               <img
                 class="imgPopular"
                 src="assest/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt=""/>
+            </div>  
+            <figcaption class="captionPopular">
+              <p>
+                <b>Morning Sun Hotel</b><p>night starting at<b>128€</b></p>
+              </p>
+              <ul>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
+        <a href="#" class="contentPopular backgroundBlank">
+          <figure>
+            <div class="frameworkPopular">
+              <img
+                class="imgPopular"
+                src="assest/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                 alt=""
               />
-              <figcaption class="captionPopular">
-                <p>
-                  <b>Morning  Sun Hotel</b><p>night starting at <b>128€</b></p>
-                </p>
+            </div>  
+            <figcaption class="captionPopular">
+              <p>
+                <b>Au cceur de l'eau Bed and Breakfast</b></p>
+                <p>night starting at<b> 71€</b></p>
                 <ul>
                   <li>
                     <i class="fas fa-star"></i>
@@ -340,24 +369,24 @@
                     <i class="fas fa-star"></i>
                   </li>
                   <li>
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star checked"></i>
                   </li>
                 </ul>
-              </figcaption>
+            </figcaption>
           </figure>
         </a>
         <a href="#" class="contentPopular backgroundBlank">
-          <figure>
-            <div class="frameworkPopular">
-              <img
-                class="imgPopular"
-                src="assest/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                alt=""
-              />
+            <figure>
+              <div class="frameworkPopular">
+                <img
+                  class="imgPopular"
+                  src="assest/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                  alt=""/>
+              </div>  
               <figcaption class="captionPopular">
                 <p>
-                  <b>Au cceur de l'eau Bed and Breakfast</b></p>
-                  <p>night starting at<b> 71€</b></p>
+                  <b>Tout bleu et Blanc Hotel</b></p>
+                  <p>night starting at<b> 68€</b></p>
                   <ul>
                     <li>
                       <i class="fas fa-star"></i>
@@ -375,45 +404,12 @@
                       <i class="fas fa-star checked"></i>
                     </li>
                   </ul>
-              </figcaption>
-          </figure>
-        </a>
-        <a href="#" class="contentPopular backgroundBlank">
-            <figure>
-              <div class="frameworkPopular">
-                <img
-                  class="imgPopular"
-                  src="assest/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                  alt=""
-                />
-                <figcaption class="captionPopular">
-                  <p>
-                    <b>Tout bleu et Blanc Hotel</b></p>
-                    <p>night starting at<b> 68€</b></p>
-                    <ul>
-                      <li>
-                        <i class="fas fa-star"></i>
-                      </li>
-                      <li>
-                        <i class="fas fa-star"></i>
-                      </li>
-                      <li>
-                        <i class="fas fa-star"></i>
-                      </li>
-                      <li>
-                        <i class="fas fa-star"></i>
-                      </li>
-                      <li>
-                        <i class="fas fa-star checked"></i>
-                      </li>
-                    </ul>
                 </figcaption>
             </figure>
           </a>
       </div>
     </section>  
    </div>
-
     <!-- Activities SECTION -->
     <section id="activites" class="marginSides">
     <h2>Activites in Marseille</h2>
@@ -448,8 +444,7 @@
             <div class="blockFigureSmall2">
               <img
                 class="imgActivity"
-                src="assest/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-              />
+                src="assest/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""/>
             </div>
             <p class="textActivity">Frioul Island</p>
           </a>
