desktop some changes

--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
     <title>Booki</title>
 </head>
 <body>
-  <!-- HEADER - logo - serachBar - menuBar - filter -->
-  <header class="header">
-    <div class="navbar">
-      <div class="logo">
-        <img src="assest/images/logo/Booki.png" alt="LOGO">
-      </div>
-      <nav>
-        <ul>
-          <li><a href="">Accomodations</a></li>
-          <li><a href="">Activities</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>  
+  <!-- Header VERSION PC and TABLETTE -->
+  <header id="header" class="marginSides">
+    <img
+    id="logo"
+    src="assest/images/logo/Booki.png"
+    alt="logo"/>
+    <nav>
+      <ul class="navbar">
+        <li><a href="#accomodations">Accomodations</a></li>
+        <li><a href="#activites">Activities</a></li>
+      </ul>
+    </nav>
+  </header>
   <!-- Mobile Version -->
   <header id="headerMob">
     <div class="headerMobile">
@@ -320,8 +319,8 @@
             </div>  
             <figcaption class="captionPopular">
               <p>
-                <b>Morning Sun Hotel</b><p>night starting at<b>128€</b></p>
-              </p>
+                <b>Morning Sun Hotel</b></p>
+                <p>night starting at <b>128€</b></p>
               <ul>
                 <li>
                   <i class="fas fa-star"></i>
@@ -348,65 +347,64 @@
               <img
                 class="imgPopular"
                 src="assest/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                alt=""
-              />
+                alt=""/>
             </div>  
             <figcaption class="captionPopular">
               <p>
                 <b>Au cceur de l'eau Bed and Breakfast</b></p>
                 <p>night starting at<b> 71€</b></p>
-                <ul>
-                  <li>
-                    <i class="fas fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star"></i>
-                  </li>
-                  <li>
-                    <i class="fas fa-star checked"></i>
-                  </li>
-                </ul>
+              <ul>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star checked"></i>
+                </li>
+              </ul>
             </figcaption>
           </figure>
         </a>
         <a href="#" class="contentPopular backgroundBlank">
-            <figure>
-              <div class="frameworkPopular">
-                <img
-                  class="imgPopular"
-                  src="assest/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                  alt=""/>
-              </div>  
-              <figcaption class="captionPopular">
-                <p>
-                  <b>Tout bleu et Blanc Hotel</b></p>
-                  <p>night starting at<b> 68€</b></p>
-                  <ul>
-                    <li>
-                      <i class="fas fa-star"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star"></i>
-                    </li>
-                    <li>
-                      <i class="fas fa-star checked"></i>
-                    </li>
-                  </ul>
-                </figcaption>
-            </figure>
-          </a>
+          <figure>
+            <div class="frameworkPopular">
+              <img
+                class="imgPopular"
+                src="assest/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                alt=""/>
+            </div>  
+            <figcaption class="captionPopular">
+              <p>
+                <b>Toubt bleu et Blanc Hotel</b></p>
+                <p>night starting at<b> 68€</b></p>
+              <ul>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star"></i>
+                </li>
+                <li>
+                  <i class="fas fa-star checked"></i>
+                </li>
+              </ul>
+            </figcaption>
+          </figure>
+        </a>
       </div>
     </section>  
    </div>
