add marginside to acc and popular desktop version

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    <!----- Accomodation and Popular ----->
    <div class="mainPopularAcc marginSides">
     <!---- Accomodation section ----->
-    <section id="accomodations" class="backgroundGrid">
+    <section id="accomodations" class="backgroundGrid marginSides">
       <h2 class="accomodationTitle">Accomodations in Marseille</h2>
       <div class="mainContentOfAcc">
         <a href="#" class="contentAcc backgroundBlank">
@@ -303,7 +303,7 @@
     </section>   
 
     <!-- POPULAR ACC SECTION -->
-    <section id="popular" class="backgroundGrid">
+    <section id="popular" class="backgroundGrid marginSides">
       <div class="popularTitle">
         <h2>Most Papular</h2>
         <i class="fa-sharp fa-solid fa-star"></i>
