--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 <body>
   <!-- Header VERSION PC and TABLETTE -->
   <header id="header" class="marginSides">
-    <img
-    id="logo"
-    src="assest/images/logo/Booki.png"
-    alt="logo"/>
+    <img id="logo" src="assest/images/logo/Booki.png" alt="logo"/>
     <nav>
       <ul class="navbar">
         <li><a href="#accomodations">Accomodations</a></li>
